# itmo-python-2025-2026

./: .gitignore  README.md
hw_1/artifacts/: nl.md  tail.md  wc.md
hw_1/nl/: Makefile  pyproject.toml
hw_1/nl/nl/: __main__.py
hw_1/tail/: Makefile  pyproject.toml
hw_1/tail/tail/: __main__.py
hw_1/wc/: Makefile  pyproject.toml
hw_1/wc/wc/: __main__.py
hw_2/: Dockerfile  Makefile  pyproject.toml
hw_2/artifacts/: document.tex  howto.md
hw_2/latex/: __init__.py  __main__.py
hw_2/latex/internal/: export.py  format.py
hw_3/artifacts/task_1/: matrix*.txt  matrix+.txt  matrix1.txt  matrix2.txt  matrix@.txt
hw_3/artifacts/task_2/: matrix*.txt  matrix+.txt  matrix1.txt  matrix2.txt  matrix@.txt
hw_3/artifacts/task_3/: A.txt  AB.txt  B.txt  D.txt  hash.txt
hw_3/matrix/: Makefile  pyproject.toml
hw_3/matrix/matrix/: __init__.py
hw_3/matrix/matrix/internal/: cache.py  matrix.py  mixins.py
hw_4/artifacts/fibonacci/: howto.md  measurements.csv
hw_4/artifacts/integral/: howto.md  measurements.csv
hw_4/artifacts/ipc/: chat.txt  howto.md
hw_4/fibonacci/: Makefile  pyproject.toml
hw_4/fibonacci/fibonacci/: __main__.py
hw_4/fibonacci/fibonacci/internal/: fibonacci.py
hw_4/integral/: Makefile  pyproject.toml
hw_4/integral/integral/: __main__.py
hw_4/integral/integral/internal/: integral.py
hw_4/ipc/: Makefile  pyproject.toml
hw_4/ipc/ipc/: __main__.py
hw_4/ipc/ipc/internal/: printer.py  rot13.py
hw_4/ipc/ipc/internal/processes/: a.py  b.py  m.py
