[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tail"
version = "0.0.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^25.9"
mypy = "^1.18"
ruff = "^0.14"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
no_implicit_optional = true
python_version = "3.13"
strict_equality = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "BLE001", # Checks for `except` clauses that catch all exceptions.
    "D100",   # Missing docstring in public module.
    "D104",   # Missing docstring in public package.
]
select = ["ALL"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "numpy"
